# animationClick

./: README.md  modif_image.py  pyproject.toml  tutorial.md  windows.py
